View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028499 | Open CASCADE | OCCT:Modeling Algorithms | public | 2017-03-01 18:23 | 2018-06-29 21:19 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0028499: Checkshape incorrectly reports BRepCheck_NotClosed when gap is covered by vertex tolerance | ||||
Description | For the attached face, checkshape reports BRepCheck_NotClosed for the wire of the face. Really the gap between edges is covered by their common vertex tolerance (0.000394386026756954). The checking algorithm checks the distance in 2D space that can be significantly distorted. It is needed to check distance only in 3D space. | ||||
Steps To Reproduce | Test case bugs modalg_7 bug28499 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_7 bug28499 | ||||
2017-03-01 18:23 developer |
gap_3d.PNG (6,897 bytes) |
|
Branch CR28499 has been created by mpa. SHA-1: cde3f22d3673962c47cbfdb7e1957cd2a69f5606 Detailed log of new commits: Author: mpa Date: Wed May 17 14:56:02 2017 +0300 0028499: Checkshape incorrectly reports BRepCheck_NotClosed when gap is covered by vertex tolerance |
|
In the attached script the distance between two vertices(0.0003944) is more that 3D tolerance(0.0003943). Thus, current example don't show the problem. But theoretically this bug can be reproduced for the other case. |
|
Please consider verbal remarks. |
|
Dear Igor, please consider this bug along with related #28722. |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 93dd583f1b465e401928e6f111b0522c8ac283ac |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 10366c066faacd13aa43924531f48da085c9ecbf |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: dead30aba4f036af2d484c01603df1c5254e2cc9 |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 8f46835d04816ecd5e81b29e8ca5cf2da997a2d2 |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 10e91673fcdb2f1520150153f048ab4f4a632362 |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 29997f1a5d861144e236b482493c23224a30cd6b |
2017-12-26 11:32 developer |
bug28499.brep (31,020 bytes) |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 554de85da760f0387b430280659078ed993e0529 |
|
Bramches CR28499 and CR28499-p (product git) are ready for review. Test results are CR28499-master-IFV (CR28499-p contains only test modification) |
|
Remarks: src/BRepCheck/BRepCheck_Wire.cxx - 490,495: use aMDU,aMDV instead of sqrt. - make a new static function to avoid code duplication in 482-496 and 508-522. tests/bugs/modalg_7/bug27711 - 1: too wide to do pattern. - 45: why checkshape has been removed? tests/bugs/modalg_7/bug28200 - remove the last two lines with showing faulty shapes. |
|
src/BRepCheck/BRepCheck_Wire.cxx - remove treatment below the line 362. |
|
Branch CR28499 has been updated by ifv. SHA-1: aa9ccc17ec165e5da3001d488cfc42bb4fafbc56 Detailed log of new commits: Author: ifv Date: Tue Dec 26 17:14:18 2017 +0300 Test Commit |
|
Branch CR28499 has been deleted by ifv. SHA-1: aa9ccc17ec165e5da3001d488cfc42bb4fafbc56 |
|
Branch CR28499 has been created by ifv. SHA-1: aef8284d6113bf3d3769cee4b38b4177e0b13dd9 Detailed log of new commits: Author: ifv Date: Fri Dec 15 10:23:29 2017 +0300 0028499: Checkshape incorrectly reports BRepCheck_NotClosed when gap is covered by vertex tolerance Calculation of 2d tolerance is improved |
|
Branch CR28499 is updated according to remarks. Test results are on CR28499-master-IFV |
|
Branch CR28499 has been updated forcibly by ifv. SHA-1: 0b2131b85fc8cffffc520af376b0e5b82fa2628f |
|
CR28499 is updated |
|
Reviewed. |
|
Combination - OCCT branch : CR28499 SHA - aef8284d6113bf3d3769cee4b38b4177e0b13dd9 Products branch : CR28499-p SHA - 925de254fbff0d26b8cd6186c4471f1d2b35d25e was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences Test case: bugs modalg_7 bug28499 - OK CPU differences: Debian70-64: OCCT Total CPU difference: 18376.299999999635 / 18513.219999999714 [-0.74%] Products Total CPU difference: 7466.750000000016 / 7509.540000000005 [-0.57%] Windows-64-VC10: OCCT Total CPU difference: 17989.879318998544 / 17919.33566679854 [+0.39%] Products Total CPU difference: 8047.077583499998 / 8016.251785899991 [+0.38%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR28499 has been deleted by kgv. SHA-1: 0b2131b85fc8cffffc520af376b0e5b82fa2628f |
occt: master 5d010b1d 2017-12-15 07:23:29
Committer: apn Details Diff |
0028499: Checkshape incorrectly reports BRepCheck_NotClosed when gap is covered by vertex tolerance Calculation of 2d tolerance is improved |
Affected Issues 0028499 |
|
mod - src/BRepCheck/BRepCheck_Wire.cxx | Diff File | ||
mod - tests/bugs/modalg_2/bug472_3 | Diff File | ||
mod - tests/bugs/modalg_7/bug27711 | Diff File | ||
mod - tests/bugs/modalg_7/bug27910 | Diff File | ||
mod - tests/bugs/modalg_7/bug28200 | Diff File | ||
add - tests/bugs/modalg_7/bug28499 | Diff File | ||
mod - tests/de/iges_1/Q3 | Diff File | ||
mod - tests/de/iges_1/R8 | Diff File | ||
mod - tests/de/iges_2/C4 | Diff File | ||
mod - tests/de/iges_2/G2 | Diff File | ||
mod - tests/de/iges_2/H9 | Diff File | ||
mod - tests/de/iges_3/A5 | Diff File | ||
mod - tests/heal/data/advanced/A5 | Diff File | ||
mod - tests/heal/data/advanced/Z6 | Diff File | ||
mod - tests/offset/with_intersect_80/L9 | Diff File | ||
mod - tests/offset/with_intersect_80/N7 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-03-01 18:23 |
|
New Issue | |
2017-03-01 18:23 |
|
Assigned To | => msv |
2017-03-01 18:23 |
|
File Added: gap_3d.PNG | |
2017-03-01 18:23 |
|
File Added: face_with_gap.brep | |
2017-04-05 12:54 |
|
Assigned To | msv => mpa |
2017-04-05 12:54 |
|
Status | new => assigned |
2017-05-17 14:57 | git | Note Added: 0066201 | |
2017-05-17 15:14 | mpa | Note Added: 0066206 | |
2017-05-17 15:14 | mpa | Assigned To | mpa => msv |
2017-05-17 15:14 | mpa | Status | assigned => resolved |
2017-05-17 15:14 | mpa | Steps to Reproduce Updated | |
2017-05-18 18:05 |
|
Note Added: 0066292 | |
2017-05-18 18:05 |
|
Assigned To | msv => mpa |
2017-05-18 18:05 |
|
Status | resolved => assigned |
2017-07-24 09:22 |
|
Target Version | 7.2.0 => 7.3.0 |
2017-11-24 11:17 |
|
Note Added: 0072458 | |
2017-11-24 11:17 |
|
Assigned To | mpa => ifv |
2017-12-05 17:08 |
|
Target Version | 7.3.0 => 7.4.0 |
2017-12-15 10:25 | git | Note Added: 0072996 | |
2017-12-15 13:33 | git | Note Added: 0073000 | |
2017-12-18 11:47 | git | Note Added: 0073013 | |
2017-12-21 12:06 | git | Note Added: 0073062 | |
2017-12-22 17:04 | git | Note Added: 0073092 | |
2017-12-25 14:56 | git | Note Added: 0073110 | |
2017-12-26 11:32 |
|
File Added: bug28499.brep | |
2017-12-26 11:32 |
|
File Deleted: face_with_gap.brep | |
2017-12-26 11:33 |
|
Steps to Reproduce Updated | |
2017-12-26 11:34 | git | Note Added: 0073136 | |
2017-12-26 11:53 |
|
Note Added: 0073140 | |
2017-12-26 11:53 |
|
Assigned To | ifv => msv |
2017-12-26 11:53 |
|
Status | assigned => resolved |
2017-12-26 17:02 |
|
Note Added: 0073154 | |
2017-12-26 17:02 |
|
Assigned To | msv => ifv |
2017-12-26 17:02 |
|
Status | resolved => assigned |
2017-12-26 17:03 |
|
Note Added: 0073156 | |
2017-12-26 17:14 | git | Note Added: 0073157 | |
2017-12-28 10:39 | git | Note Added: 0073177 | |
2017-12-28 16:21 | git | Note Added: 0073183 | |
2017-12-29 10:24 |
|
Note Added: 0073185 | |
2017-12-29 10:24 |
|
Assigned To | ifv => msv |
2017-12-29 10:24 |
|
Status | assigned => resolved |
2017-12-29 14:59 | git | Note Added: 0073196 | |
2017-12-29 15:00 |
|
Assigned To | msv => ifv |
2017-12-29 15:00 |
|
Status | resolved => assigned |
2017-12-29 15:02 |
|
Note Added: 0073198 | |
2017-12-29 15:02 |
|
Assigned To | ifv => msv |
2017-12-29 15:02 |
|
Status | assigned => resolved |
2017-12-29 15:04 |
|
Note Added: 0073199 | |
2017-12-29 15:04 |
|
Assigned To | msv => bugmaster |
2017-12-29 15:04 |
|
Status | resolved => reviewed |
2017-12-29 15:18 | apn | Test case number | => bugs modalg_7 bug28499 |
2017-12-29 15:18 | apn | Note Added: 0073201 | |
2017-12-29 15:18 | apn | Status | reviewed => tested |
2017-12-30 18:43 | apn | Changeset attached | => occt master 5d010b1d |
2017-12-30 18:43 | apn | Assigned To | bugmaster => apn |
2017-12-30 18:43 | apn | Status | tested => verified |
2017-12-30 18:43 | apn | Resolution | open => fixed |
2018-01-11 11:10 | git | Note Added: 0073306 | |
2018-02-20 12:58 |
|
Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |