0028499: Checkshape incorrectly reports BRepCheck_NotClosed when gap is covered by vertex tolerance

Calculation of 2d tolerance is improved